<resources>
    <string name="app_name">果优选</string>
    <string name="faxian">发现</string>
    <string name="zhuye">主页</string>
    <string name="wode">我的</string>
    <string name="guangguoyuan">逛果园</string>
    <string name="chishuiguo">吃水果</string>
    <string name="xiaojiankang">晓健康</string>
    <string name="dangjihaoshuiguo">当季好水果</string>
    <string name="yimaidaodeshuiguo">已买到的水果</string>
    <string name="paixuefangshi">排序方式 : </string>
    <string name="zuixingshangshi">最新上市</string>
    <string name="xiaoliangzuijia">销量最佳</string>
    <string name="zonghezuigao">综合最高</string>
    <string name="wodemengpiao">我的门票</string>
    <string name="dengluzhuce">登录/注册</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="yonghuming">用户名</string>
    <string name="mima">密码</string>
    <string name="querenmima">确认密码</string>
    <string name="dizhi">地址</string>
    <string name="yue">余额</string>
    <string name="youhuidengji">优惠等级</string>
    <string name="goumaishuliang">预定数量  : </string>
    <string name="chongzhi">修改用户信息</string>
    <string name="wodeweizhi">我的位置</string>
    <string name="yunquliebiao">园区列表</string>
    <string name="wodehuodong">我参加的活动</string>
    <string name="dangqianhuodong">当前活动</string>
    <string name="canjiahuodongdeyonghu">参加活动的用户</string>
    <string name="zhangshangdaoyou">掌上导游</string>
    <string name="xiaoxi">消息</string>
    <string name="jinriyouxuanshuiguo">今日优选水果</string>
    <string name="guoyouxuan">果优选</string>
    <string name="youjixianguo">有机鲜果</string>
    <string name="regsiter_err_info_emptybox">有未填的表项,请填完所有的表项</string>
    <string name="regsiter_err_info_diffpassword">两次密码不一样,重新填写</string>
    <string name="yunquxinxi">服务信息</string>
    <string name="yuanqujianjie">服务简介</string>
    <string name="yuanquweizhi">园区位置</string>
    <string name="ruyuanxuzhi">用户须知</string>
    <string name="dingmengpiao">订门票</string>
    <string name="yuding">预定</string>
    <string name="yuyue">预约</string>
    <string name="shenyupiaoshu">剩余可入园人数:</string>
    <string name="shuiguojianjie">水果简介</string>
    <string name="ruyuanrenshu">入园人数</string>
    <string name="ruyuanshijian">预定入园时间:   </string>
    <string name="yue_month">月</string>
    <string name="ri">日</string>
    <string name="lianxidianhuan">联系电话</string>
    <string name="yuanquditu">园区地图</string>
    <string name="yuanqudangqianqingkuang">园区当前情况</string>
    <string name="kaishidingwei">开始定位</string>
    <string name="zantingdingwei">暂停定位</string>
    <string name="zhoubianyou">周边游</string>
    <string name="guoyuanhuodong">果园活动</string>
    <string name="zhankai">展开</string>
    <string name="jiangkangzhishi">健康知识</string>
    <string name="kupushizhishi">科普知识</string>
    <string name="zhedie">折叠</string>
    <string name="lilacishu">浏览次数</string>
    <string name="aixinguoshu">爱心果树</string>
    <string name="zongjuanxuanjinge">总捐献金额(元)</string>
    <string name="yijiechuaixinguo">已结出爱心果(个)</string>
    <string name="aixinguoshu_bref">您在平台花的分一块钱都将有1%被用于当地残疾人扶持上</string>
    <string name="aixingguoshu_intro">爱心树：您在平台花的分一块钱都将有1%被用于当地残疾人扶持上，平台交易额每达到10万元，您都将从平台爱心树上，清楚的看到您的爱心开花结果。</string>
    <string name="renwujianjie">任务简介:</string>
    <string name="renwuxuzhe">任务须知:</string>
    <string name="chakanaixinguoshu">查看爱心果树 </string>
    <string name="fanxianrenwu">发现新奇活动</string>
    <string name="boughtnotice"> 用户须知:\n \t\t该操作仅为预定该商品,工作人员将会在预定后与您联系确认购买信息(水果:送货或自取,园区门票:园区具体情况),并提供支付办法;为了您能及时收到商品,请确保您注册所留联系方式有效!</string>
</resources>
