<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttongreen"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/chishuiguo"
        android:textColor="#000000"
        android:textSize="25sp" />


    <com.scarecrow.root.orchardapp.AdsBanner
        android:id="@+id/fruit_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp">

    </com.scarecrow.root.orchardapp.AdsBanner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/lightgray">
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:text="@string/dangjihaoshuiguo"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/paixuefangshi"
            android:textSize="12sp" />
        <Button
            android:id="@+id/fruit_list_sortby_all"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_weight="0.07"
            android:gravity="left"
            android:text="@string/zonghezuigao"
            android:textSize="12sp" />
        <Button
            android:id="@+id/fruit_list_sortby_hot"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:gravity="left"
            android:text="@string/xiaoliangzuijia"
            android:textSize="12sp" />
        <Button
            android:id="@+id/fruit_list_sortby_rating"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/zuixingshangshi"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray">
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fruit_list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="8"
        android:padding="10dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>