<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttongreen"
            android:text="@string/yunquxinxi"
            android:gravity="center"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="25sp"
            android:id="@+id/orchard_single_name"/>

        <com.scarecrow.root.orchardapp.AdsBanner
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/orchard_single_banner">
        </com.scarecrow.root.orchardapp.AdsBanner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/buttongreen"
                android:id="@+id/orchard_intro_button">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/yuanqujianjie"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/bump_icon_forinfo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/buttongreen"
                android:id="@+id/orchard_pos_button">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/yuanquweizhi"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/house_icon"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/orchard_ticket_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="price"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/orchard_ticket_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="remain"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruyuanrenshu"
                android:layout_gravity="center"/>
            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:id="@+id/booking_count">

            </NumberPicker>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruyuanshijian"
                android:paddingRight="15dp"
                android:layout_gravity="center"/>

            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:id="@+id/booking_month">
            </NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yue_month"
                android:layout_gravity="center"/>

            <NumberPicker
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:id="@+id/booking_day">
            </NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ri"
                android:layout_gravity="center"/>

        </LinearLayout>


        <Button
            android:id="@+id/ticket_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/yuyue"
            android:background="@color/buttongreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/lightgray">

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruyuanxuzhi"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/orchard_rules"/>
    </LinearLayout>
</ScrollView>