<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttongreen"
            android:gravity="center"
            android:text="@string/yunquxinxi"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/orchard_single_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <com.scarecrow.root.orchardapp.AdsBanner
            android:id="@+id/orchard_single_banner"
            android:layout_width="match_parent"
            android:layout_height="150dp">
        </com.scarecrow.root.orchardapp.AdsBanner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/orchard_intro_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/buttongreen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuanqujianjie"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/bump_icon_forinfo" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/orchard_pos_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/buttongreen"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuanquweizhi"
                    android:textSize="20sp" />
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/house_icon"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/orchard_ticket_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="price"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orchard_ticket_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="remain"
            android:textColor="#000000"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightgray">

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ruyuanrenshu" />
            <NumberPicker
                android:id="@+id/booking_count"
                android:layout_width="50dp"
                android:layout_height="45dp">

            </NumberPicker>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="15dp"
                android:text="@string/ruyuanshijian" />

            <NumberPicker
                android:id="@+id/booking_month"
                android:layout_width="50dp"
                android:layout_height="45dp">
            </NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/yue_month" />

            <NumberPicker
                android:id="@+id/booking_day"
                android:layout_width="50dp"
                android:layout_height="45dp">
            </NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ri" />

        </LinearLayout>


        <Button
            android:id="@+id/ticket_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/buttongreen"
            android:padding="12dp"
            android:text="@string/yuyue" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/boughtnotice"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/lightgray">

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ruyuanxuzhi"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orchard_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>