<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttongreen"
            android:gravity="center"
            android:text="@string/youjixianguo"
            android:padding="7dp"
            android:textColor="#000000"
            android:textSize="25sp" />

        <com.scarecrow.root.orchardapp.AdsBanner
            android:id="@+id/fruitshop_banner"
            android:layout_width="match_parent"
            android:layout_height="190dp">

        </com.scarecrow.root.orchardapp.AdsBanner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fruitshop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/buttongreen"
                android:padding="8dp"
                android:text="name"
                android:textColor="#FFFFF0"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruitshop_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="12dp"
                android:padding="5dp"
                android:text="price"
                android:textColor="@color/colorAccent"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/fruitshop_stockremain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="remain"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray">

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"

                    android:text="@string/goumaishuliang"
                    android:textSize="13sp" />

                <NumberPicker
                    android:id="@+id/fruit_buy_num"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="end">

                </NumberPicker>


            </LinearLayout>

            <Button
                android:id="@+id/fruit_buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/buttongreen"
                android:padding="10dp"
                android:text="@string/yuding" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/boughtnotice"
                android:textColor="#000000"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightgray">

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/aixinguoshu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aixinguoshu_bref" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chakanaixinguoshu"
                android:layout_gravity="end"
                android:textSize="13sp"
                android:id="@+id/to_donate_tree_btn" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/lightgray">

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/shuiguojianjie"
            android:textColor="#000000"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray">

        </LinearLayout>

        <TextView
            android:id="@+id/fruitshop_bref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="bref"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/fruitshop_longintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>