<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttongreen"
        android:gravity="center"
        android:text="@string/zhuce"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/lightgray">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/yonghuming"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </LinearLayout>

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="180dp"

            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mima"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </LinearLayout>

        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/querenmima"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </LinearLayout>

        <EditText
            android:id="@+id/register_password_confirm_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dizhi"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </LinearLayout>

        <EditText
            android:id="@+id/register_address_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lianxidianhuan"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </LinearLayout>

        <EditText
            android:id="@+id/register_phonenum_input"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/register_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/zhuce" />
    </LinearLayout>
    <TextView
        android:id="@+id/register_state_output"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"/>


</LinearLayout>